<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18dp"
        android:text="@string/addLife_customDialogContentText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_positive"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/add_ife_dialog_positive_round"
        android:text="@string/addLife_customDialogPositiveButtonText"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_negative"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/add_life_dialog_negative_round"
        android:text="@string/addLife_customDialogNegativeButtonText"
        android:textColor="@color/addLifeCustomDialogColor" />

</LinearLayout>