<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="categoryOption"
            type="com.smparkworld.daangnmarket.ui.main.addLife.CategoryOptionActivity" />

        <variable
            name="viewModel"
            type="com.smparkworld.daangnmarket.ui.main.addLife.CategoryOptionViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.main.addLife.CategoryOptionActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/life_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="@dimen/activityAddLife_titleImageSize"
                    android:layout_height="@dimen/activityAddLife_titleImageSize"
                    android:layout_gravity="center"
                    android:onClick="@{categoryOption::onClick}"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activityAddLife_titleMarginStart"
                    android:layout_weight="1"
                    android:text="@string/activityCategoryOption_titleText"
                    android:textColor="@color/black"
                    android:textSize="@dimen/activityAddLife_titleTextSize" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/subTitleBackgroundColor"
            android:paddingStart="@dimen/activityCategoryOption_paddingStart"
            android:paddingTop="@dimen/activityCategoryOption_subTitlePaddingTopBottom"
            android:paddingBottom="@dimen/activityCategoryOption_subTitlePaddingTopBottom"
            android:text="@string/activityCategoryOption_firstSubTitle"
            android:textColor="@color/black"
            android:textSize="@dimen/activityCategoryOption_subTitleTextSize" />

        <TextView
            android:id="@+id/tv_categoryOptionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activityCategoryOption_contentTextMarginTopBottom"
            android:background="?attr/selectableItemBackground"
            android:onClick="@{categoryOption::onClick}"
            android:paddingStart="@dimen/activityCategoryOption_paddingStart"
            android:paddingTop="@dimen/activityCategoryOption_contentTextPaddingTopBottom"
            android:paddingBottom="@dimen/activityCategoryOption_contentTextPaddingTopBottom"
            android:text="@string/activityCategoryOption_firstSubTitle_firstText"
            android:textColor="@color/black"
            android:textSize="@dimen/activityCategoryOption_contentTextSize" />

        <TextView
            android:id="@+id/tv_categoryOptionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activityCategoryOption_contentTextMarginTopBottom"
            android:background="?attr/selectableItemBackground"
            android:onClick="@{categoryOption::onClick}"
            android:paddingStart="@dimen/activityCategoryOption_paddingStart"
            android:paddingTop="@dimen/activityCategoryOption_contentTextPaddingTopBottom"
            android:paddingBottom="@dimen/activityCategoryOption_contentTextPaddingTopBottom"
            android:text="@string/activityCategoryOption_firstSubTitle_secondText"
            android:textColor="@color/black"
            android:textSize="@dimen/activityCategoryOption_contentTextSize" />

        <TextView
            android:id="@+id/tv_secondSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/subTitleBackgroundColor"
            android:paddingStart="@dimen/activityCategoryOption_paddingStart"
            android:paddingTop="@dimen/activityCategoryOption_subTitlePaddingTopBottom"
            android:paddingBottom="@dimen/activityCategoryOption_subTitlePaddingTopBottom"
            android:text="@string/activityCategoryOption_secondSubTitle"
            android:textColor="@color/black"
            android:textSize="@dimen/activityCategoryOption_subTitleTextSize"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryOption_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:paddingStart="@dimen/activityCategoryOption_paddingStart"
            android:textColor="@color/black" />
    </LinearLayout>
</layout>